--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,2 +1,3 @@
 welcome=\u6B22\u8FCE\u4F60
 internal_server_error=\u5185\u90E8\u9519\u8BEF
+you_have_a_new_task={0,date,short} \u4F60\u6709\u4E00\u4E2A\u65B0\u7684\u4EFB\u52A1: {1}
